Fixed Ravager related bugs, and improved Shocking Spell.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -18,18 +18,18 @@
   "name.goety.apostle.16" : "Indearium",
   "name.goety.apostle.17" : "Salahmon",
 
-  "title.goety.0" : "Risen",
-  "title.goety.1" : "Abhorrent",
-  "title.goety.2" : "Defiler",
-  "title.goety.3" : "Dark",
-  "title.goety.4" : "Great Shadow",
-  "title.goety.5" : "Witch King",
-  "title.goety.6" : "Pyre Lord",
-  "title.goety.7" : "Profane",
-  "title.goety.8" : "Cruel",
-  "title.goety.9" : "Terrible",
-  "title.goety.10" : "Glorious",
-  "title.goety.11" : "Atrocious",
+  "title.goety.0" : " the Risen",
+  "title.goety.1" : " the Abhorrent",
+  "title.goety.2" : " the Defiler",
+  "title.goety.3" : " the Dark",
+  "title.goety.4" : " the Great Shadow",
+  "title.goety.5" : " the Witch King",
+  "title.goety.6" : " the Pyre Lord",
+  "title.goety.7" : " the Profane",
+  "title.goety.8" : " the Cruel",
+  "title.goety.9" : " the Terrible",
+  "title.goety.10" : " the Glorious",
+  "title.goety.11" : " the Atrocious",
 
   "name.goety.crone.0" : "Gertrud",
   "name.goety.crone.1" : "Matilda",
@@ -141,6 +141,7 @@
   "entity.goety.blast_fungus":"Blast Fungus",
   "entity.goety.berserk_fungus":"Berserk Fungus",
   "entity.goety.fire_tornado":"Flaming Tornado",
+  "entity.goety.falling_block":"Falling Block",
   "entity.goety.corrupted_beam":"Beam of Corruption",
 
   "entity.goety.boat":"Boat",
