--- a/src/main/resources/assets/goety/lang/zh_cn.json
+++ b/src/main/resources/assets/goety/lang/zh_cn.json
@@ -18,18 +18,18 @@
   "name.goety.apostle.16" : "因德瑞姆",
   "name.goety.apostle.17" : "萨拉赫蒙",
 
-  "title.goety.0" : "重生",
-  "title.goety.1" : "憎恶",
-  "title.goety.2" : "毒蝎之尾",
-  "title.goety.3" : "漆黑之骨",
-  "title.goety.4" : "黑天使之影",
-  "title.goety.5" : "女巫之王",
-  "title.goety.6" : "爆燃领主",
-  "title.goety.7" : "饥荒",
-  "title.goety.8" : "冷酷寒冬",
-  "title.goety.9" : "可怖之物",
-  "title.goety.10" : "辉煌荣耀",
-  "title.goety.11" : "十恶不赦",
+  "title.goety.0" : " 不灭重生",
+  "title.goety.1" : " 憎恶本质",
+  "title.goety.2" : " 毒蝎之尾",
+  "title.goety.3" : " 漆黑暗影",
+  "title.goety.4" : " 黑天使之影",
+  "title.goety.5" : " 女巫之王",
+  "title.goety.6" : " 爆燃领主",
+  "title.goety.7" : " 天启饥荒",
+  "title.goety.8" : " 冷酷寒冬",
+  "title.goety.9" : " 可怖之物",
+  "title.goety.10" : " 荣耀之名",
+  "title.goety.11" : " 十恶不赦",
 
   "name.goety.crone.0" : "格特鲁德",
   "name.goety.crone.1" : "玛蒂尔达",
