Organized Spell config a bit and added more new spells.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -209,6 +209,7 @@
   "item.goety.ominous_staff": "Ominous Staff",
   "item.goety.necro_staff": "Necro Staff",
   "item.goety.wind_staff": "Wind Staff",
+  "item.goety.storm_staff": "Storm Staff",
   "item.goety.nameless_staff": "Nameless Staff",
   "item.goety.totem_of_roots": "Totem of Roots",
   "item.goety.totem_of_souls": "Totem of Souls",
@@ -325,6 +326,7 @@
   "item.goety.dark_boots": "Dark Boots",
 
   "item.goety.ring_of_want": "Ring of Want",
+  "item.goety.ring_of_the_dragon": "Ring of the Dragon",
   "item.goety.dark_hat": "Dark Hat",
   "item.goety.grand_turban": "Grand Turban",
   "item.goety.witch_hat": "Witch Hat",
@@ -374,6 +376,7 @@
   "item.goety.ghastly_focus": "Ghastly Focus",
   "item.goety.iceology_focus": "Iceology Focus",
   "item.goety.barricade_focus": "Barricade Focus",
+  "item.goety.pulverize_focus": "Pulverize Focus",
   "item.goety.illusion_focus": "Mirror Focus",
   "item.goety.feast_focus": "Feasting Focus",
   "item.goety.teeth_focus": "Teeth Focus",
@@ -399,6 +402,7 @@
   "item.goety.glow_light_focus": "Glow Light Focus",
   "item.goety.iron_hide_focus": "Iron Hide Focus",
   "item.goety.bulwark_focus": "Bulwark Focus",
+  "item.goety.soul_heal_focus": "Soul Heal Focus",
   "item.goety.launch_focus": "Launching Focus",
   "item.goety.flying_focus": "Flight Focus",
   "item.goety.cushion_focus": "Cushion Focus",
@@ -598,7 +602,7 @@
   "effect.goety.soul_armor": "Soul Armor",
   "effect.goety.soul_armor.description": "Increases armor points by 2. Triples armor points if affected entities does not wear any armor.",
   "effect.goety.iron_hide": "Iron Hide",
-  "effect.goety.iron_hide.description": "Increases armor points by 4.",
+  "effect.goety.iron_hide.description": "Increases armor points by 4 per level.",
   "effect.goety.pressure": "Pressure",
   "effect.goety.pressure.description": "Creepers will explode nigh-instantly towards targets with this effect.",
   "effect.goety.charged": "Charged",
@@ -784,6 +788,8 @@
   "info.goety.witch_robe_brew": "Press %s to open robe brewing stand.",
   "info.goety.warlock_garment": "Automatically uses Wartful Eggs when afflicted with negative effect.",
   "info.goety.warlock_robe": "+85% resistance to explosions.",
+  "info.goety.ring_of_want": "When enchanted with Wanting, increases looting level when killing with servants or spells.",
+  "info.goety.ring_of_the_dragon": "Empowers breathing spells when worn.",
   "info.goety.grave_gloves": "+50% attack speed for Scythes.",
   "info.goety.wayfarers_belt": "Increases movement and swimming speed, step and jump height.",
   "info.goety.spiteful_belt": "Hurt attackers with thorn damage when taking damage.",
@@ -831,6 +837,7 @@
   "spell.goety.frost": "§9Frost§9",
   "spell.goety.geomancy": "§7Geomancy§7",
   "spell.goety.wind": "§bWind§b",
+  "spell.goety.storm": "§6Storm§6",
   "spell.goety.void": "§5Void§5",
 
   "tooltip.goety.arca": "Arca location: ",
@@ -1040,7 +1047,8 @@
   "subtitle.goety.evil_laugh": "Evil Laugh",
   "subtitle.goety.roar_spell": "Loud Roar",
   "subtitle.goety.fire_breath": "Breathing Flames",
-  "subtitle.goety.soul_armor": "Apply Soul Armor",
+  "subtitle.goety.soul_armor": "Apply Armor",
+  "subtitle.goety.soul_heal": "Soul Heal",
   "subtitle.goety.prepare_spell": "Prepares Spell",
   "subtitle.goety.prepare_summon": "Prepares Summon",
   "subtitle.goety.cast_spell": "Casts Spell",
