--- a/src/main/resources/assets/goety/lang/ja_jp.json
+++ b/src/main/resources/assets/goety/lang/ja_jp.json
@@ -1,171 +1,172 @@
 {
-  "name.goety.apostle.0" : "ハンセン・",
-  "name.goety.apostle.1" : "ノスグール・",
-  "name.goety.apostle.2" : "ジャバン・マル・",
-  "name.goety.apostle.3" : "エズラフェル・",
-  "name.goety.apostle.4" : "フィンバー・",
-  "name.goety.apostle.5" : "アヴァゲレオン・",
-  "name.goety.apostle.6" : "ウル・ツァーリ・",
-  "name.goety.apostle.7" : "コルマック・",
-  "name.goety.apostle.8" : "ガンダク・",
-  "name.goety.apostle.9" : "アルモン・",
-  "name.goety.apostle.10" : "バアル・ゼフォン・",
-  "name.goety.apostle.11" : "ベックスモック・",
-  "name.goety.apostle.12" : "クローゼン・",
-  "name.goety.apostle.13" : "キムル'セ・",
-  "name.goety.apostle.14" : "マルゴ・シル・",
-  "name.goety.apostle.15" : "セラフェント・",
-  "name.goety.apostle.16" : "インデアリウム・",
-  "name.goety.apostle.17" : "サラモン・",
+  "name.goety.apostle.0": "ハンセン・",
+  "name.goety.apostle.1": "ノスグール・",
+  "name.goety.apostle.2": "ジャバン・マル・",
+  "name.goety.apostle.3": "エズラフェル・",
+  "name.goety.apostle.4": "フィンバー・",
+  "name.goety.apostle.5": "アヴァゲレオン・",
+  "name.goety.apostle.6": "ウル・ツァーリ・",
+  "name.goety.apostle.7": "コルマック・",
+  "name.goety.apostle.8": "ガンダク・",
+  "name.goety.apostle.9": "アルモン・",
+  "name.goety.apostle.10": "バアル・ゼフォン・",
+  "name.goety.apostle.11": "ベックスモック・",
+  "name.goety.apostle.12": "クローゼン・",
+  "name.goety.apostle.13": "キムル'セ・",
+  "name.goety.apostle.14": "マルゴ・シル・",
+  "name.goety.apostle.15": "セラフェント・",
+  "name.goety.apostle.16": "インデアリウム・",
+  "name.goety.apostle.17": "サラモン・",
 
-  "title.goety.0" : "復活者",
-  "title.goety.1" : " 忌まわしき者",
-  "title.goety.2" : " 汚す者",
-  "title.goety.3" : " 闇の者",
-  "title.goety.4" : " 偉大なる影の者",
-  "title.goety.5" : " 魔女の王たる者",
-  "title.goety.6" : " 火葬を行いし者",
-  "title.goety.7" : " 不敬なる者",
-  "title.goety.8" : " 残酷なる者",
-  "title.goety.9" : " 恐ろしき者",
-  "title.goety.10" : " 素晴らしき者",
-  "title.goety.11" : " 極悪非道なる者",
+  "title.goety.0": "復活者",
+  "title.goety.1": " 忌まわしき者",
+  "title.goety.2": " 汚す者",
+  "title.goety.3": " 闇の者",
+  "title.goety.4": " 偉大なる影の者",
+  "title.goety.5": " 魔女の王たる者",
+  "title.goety.6": " 火葬を行いし者",
+  "title.goety.7": " 不敬なる者",
+  "title.goety.8": " 残酷なる者",
+  "title.goety.9": " 恐ろしき者",
+  "title.goety.10": " 素晴らしき者",
+  "title.goety.11": " 極悪非道なる者",
 
-  "name.goety.crone.0" : "ゲルトルート",
-  "name.goety.crone.1" : "マチルダ",
-  "name.goety.crone.2" : "グリムヒルデ",
-  "name.goety.crone.3" : "オルガ",
-  "name.goety.crone.4" : "エドナ",
-  "name.goety.crone.5" : "アガサ",
-  "name.goety.crone.6" : "ウーズゴーグル",
-  "name.goety.crone.7" : "ラットワート",
-  "name.goety.crone.8" : "ボーンワグル",
-  "name.goety.crone.9" : "フレイムトゥース",
-  "name.goety.crone.10" : "グレイブスピッター",
-  "name.goety.crone.11" : "マックバック",
+  "name.goety.crone.0": "ゲルトルート",
+  "name.goety.crone.1": "マチルダ",
+  "name.goety.crone.2": "グリムヒルデ",
+  "name.goety.crone.3": "オルガ",
+  "name.goety.crone.4": "エドナ",
+  "name.goety.crone.5": "アガサ",
+  "name.goety.crone.6": "ウーズゴーグル",
+  "name.goety.crone.7": "ラットワート",
+  "name.goety.crone.8": "ボーンワグル",
+  "name.goety.crone.9": "フレイムトゥース",
+  "name.goety.crone.10": "グレイブスピッター",
+  "name.goety.crone.11": "マックバック",
 
-  "name.goety.crone.12" : "ゾフチ",
-  "name.goety.crone.13" : "ディッカ",
-  "name.goety.crone.14" : "ネザ",
-  "name.goety.crone.15" : "オイドヌイ",
-  "name.goety.crone.16" : "ボリ",
-  "name.goety.crone.17" : "ストラハ",
+  "name.goety.crone.12": "ゾフチ",
+  "name.goety.crone.13": "ディッカ",
+  "name.goety.crone.14": "ネザ",
+  "name.goety.crone.15": "オイドヌイ",
+  "name.goety.crone.16": "ボリ",
+  "name.goety.crone.17": "ストラハ",
 
-  "title.goety.crone.0" : "ババ",
-  "title.goety.crone.1" : "老婆",
-  "title.goety.crone.2" : "古き人",
-  "title.goety.crone.3" : "魔女",
+  "title.goety.crone.0": "ババ",
+  "title.goety.crone.1": "老婆",
+  "title.goety.crone.2": "古き人",
+  "title.goety.crone.3": "魔女",
 
   "itemGroup.goety": "Goety",
 
-  "entity.goety.apostle":"使徒",
-  "entity.goety.obsidian_monolith":"黒曜石のモノリス",
-  "entity.goety.warlock":"ウォーロック",
-  "entity.goety.wartling":"イボリング",
-  "entity.goety.crone":"老婆",
-  "entity.goety.zombie_villager_servant":"村人ゾンビの従者",
-  "entity.goety.skeleton_villager_servant":"村人スケルトンの従者",
-  "entity.goety.ravaged":"荒廃",
-  "entity.goety.ravager":"ラヴェジャー",
-  "entity.goety.armored_ravager":"ラヴェジャー",
-  "entity.goety.zombie_ravager":"ゾンビラヴェジャー",
-  "entity.goety.redstone_golem":"レットストーンゴーレム",
-  "entity.goety.grave_golem":"グレイブゴーレム",
-  "entity.goety.haunt":"幽霊",
-  "entity.goety.zpiglin_servant":"ゾンビピグリンの従者",
-  "entity.goety.zpiglin_brute_servant":"ゾンビピグリンブルートの従者",
-  "entity.goety.malghast":"マルガスト",
+  "entity.goety.apostle": "使徒",
+  "entity.goety.obsidian_monolith": "黒曜石のモノリス",
+  "entity.goety.warlock": "ウォーロック",
+  "entity.goety.wartling": "イボリング",
+  "entity.goety.crone": "老婆",
+  "entity.goety.zombie_villager_servant": "村人ゾンビの従者",
+  "entity.goety.skeleton_villager_servant": "村人スケルトンの従者",
+  "entity.goety.ravaged": "荒廃",
+  "entity.goety.ravager": "ラヴェジャー",
+  "entity.goety.armored_ravager": "ラヴェジャー",
+  "entity.goety.zombie_ravager": "ゾンビラヴェジャー",
+  "entity.goety.redstone_golem": "レットストーンゴーレム",
+  "entity.goety.grave_golem": "グレイブゴーレム",
+  "entity.goety.haunt": "幽霊",
+  "entity.goety.zpiglin_servant": "ゾンビピグリンの従者",
+  "entity.goety.zpiglin_brute_servant": "ゾンビピグリンブルートの従者",
+  "entity.goety.malghast": "マルガスト",
 
-  "entity.goety.vampire_bat":"吸血コウモリ",
+  "entity.goety.vampire_bat": "吸血コウモリ",
 
-  "entity.goety.wraith":"レイス",
-  "entity.goety.border_wraith":"ボーダーレイス",
-  "entity.goety.cairn_necromancer":"ケルンネクロマンサー",
-  "entity.goety.haunted_armor":"幽霊の鎧",
+  "entity.goety.wraith": "レイス",
+  "entity.goety.border_wraith": "ボーダーレイス",
+  "entity.goety.cairn_necromancer": "ケルンネクロマンサー",
+  "entity.goety.haunted_armor": "幽霊の鎧",
 
-  "entity.goety.ally_vex":"ヴェックス",
-  "entity.goety.ally_irk":"インク",
-  "entity.goety.zombie_servant":"ゾンビの従者",
-  "entity.goety.husk_servant":"ハスクの従者",
-  "entity.goety.drowned_servant":"ドラウンドの従者",
-  "entity.goety.skeleton_servant":"スケルトンの従者",
-  "entity.goety.stray_servant":"ストレイの従者",
-  "entity.goety.necromancer_servant":"ネクロマンサーの従者",
-  "entity.goety.vanguard_servant":"ヴァンガードの従者",
-  "entity.goety.wraith_servant":"レイスの従者",
-  "entity.goety.haunted_armor_servant":"幽霊の鎧の従者",
-  "entity.goety.haunted_skull":"幽霊の頭蓋骨",
-  "entity.goety.doppelganger":"ドッペルゲンガー",
-  "entity.goety.mini_ghast":"ミニガスト",
+  "entity.goety.ally_vex": "ヴェックス",
+  "entity.goety.ally_irk": "インク",
+  "entity.goety.zombie_servant": "ゾンビの従者",
+  "entity.goety.husk_servant": "ハスクの従者",
+  "entity.goety.drowned_servant": "ドラウンドの従者",
+  "entity.goety.skeleton_servant": "スケルトンの従者",
+  "entity.goety.stray_servant": "ストレイの従者",
+  "entity.goety.necromancer_servant": "ネクロマンサーの従者",
+  "entity.goety.vanguard_servant": "ヴァンガードの従者",
+  "entity.goety.wraith_servant": "レイスの従者",
+  "entity.goety.haunted_armor_servant": "幽霊の鎧の従者",
+  "entity.goety.haunted_skull": "幽霊の頭蓋骨",
+  "entity.goety.doppelganger": "ドッペルゲンガー",
+  "entity.goety.mini_ghast": "ミニガスト",
 
-  "entity.goety.totemic_wall":"トーテミックウォール",
-  "entity.goety.totemic_bomb":"トーテミックボム",
+  "entity.goety.totemic_wall": "トーテミックウォール",
+  "entity.goety.totemic_bomb": "トーテミックボム",
 
-  "entity.goety.skull_lord":"スカルロード",
-  "entity.goety.bone_lord":"ボーンロード",
+  "entity.goety.skull_lord": "スカルロード",
+  "entity.goety.bone_lord": "ボーンロード",
 
-  "entity.goety.envioker":"エンビオッカー",
-  "entity.goety.tormentor":"トーメントター",
-  "entity.goety.inquillager":"尋問者",
-  "entity.goety.conquillager":"コンキラージャー",
-  "entity.goety.piker":"ピーカー",
-  "entity.goety.preacher":"説教者",
+  "entity.goety.envioker": "エンビオッカー",
+  "entity.goety.tormentor": "トーメントター",
+  "entity.goety.inquillager": "尋問者",
+  "entity.goety.conquillager": "コンキラージャー",
+  "entity.goety.piker": "ピーカー",
+  "entity.goety.preacher": "説教者",
 
-  "entity.goety.minister":"大臣",
+  "entity.goety.minister": "大臣",
 
-  "entity.goety.vizier":"宰相",
-  "entity.goety.irk":"インク",
+  "entity.goety.vizier": "宰相",
+  "entity.goety.irk": "インク",
 
-  "entity.goety.nether_meteor":"ネザーメテオ",
+  "entity.goety.nether_meteor": "ネザーメテオ",
   "entity.goety.fireball": "小さな火の玉",
   "entity.goety.lavaball": "ファイアボール",
   "entity.goety.grand_lavaball": "グランドファイアボール",
   "entity.goety.dragon_fireball": "ドラゴンファイアボール",
   "entity.goety.haunted_skull_shot": "幽霊の頭蓋骨",
   "entity.goety.wither_skull": "ウィザーの頭蓋骨",
-  "entity.goety.sword":"フライングソード",
-  "entity.goety.ice_spike":"アイススパイク",
-  "entity.goety.death_arrow":"デスアロー",
+  "entity.goety.sword": "フライングソード",
+  "entity.goety.ice_spike": "アイススパイク",
+  "entity.goety.death_arrow": "デスアロー",
   "entity.goety.brew": "魔女のビール",
-  "entity.goety.scythe":"サイススラッシュ",
-  "entity.goety.soul_bullet":"ソウルバレット",
-  "entity.goety.soul_bolt":"ソウルボルト",
-  "entity.goety.necro_bolt":"ネクロボルト",
-  "entity.goety.magic_bolt":"マジックボルト",
-  "entity.goety.fang":"魔法の牙",
-  "entity.goety.spike":"ロイヤル スパイク",
-  "entity.goety.vicious_tooth":"悪質な歯",
-  "entity.goety.vicious_pike":"ヴィシャスパイク",
-  "entity.goety.ill_bomb":"イルボム",
-  "entity.goety.ice_bouquet":"アイスブーケ",
-  "entity.goety.ice_chunk":"氷の塊",
-  "entity.goety.scatter_mine":"スキャッターマイン",
-  "entity.goety.snap_fungus":"スナップ菌",
-  "entity.goety.blast_fungus":"ブラスト菌",
-  "entity.goety.berserk_fungus":"ベルセルク菌",
-  "entity.goety.fire_tornado":"炎の竜巻",
+  "entity.goety.scythe": "サイススラッシュ",
+  "entity.goety.soul_bullet": "ソウルバレット",
+  "entity.goety.soul_bolt": "ソウルボルト",
+  "entity.goety.necro_bolt": "ネクロボルト",
+  "entity.goety.magic_bolt": "マジックボルト",
+  "entity.goety.fang": "魔法の牙",
+  "entity.goety.spike": "ロイヤル スパイク",
+  "entity.goety.vicious_tooth": "悪質な歯",
+  "entity.goety.vicious_pike": "ヴィシャスパイク",
+  "entity.goety.ill_bomb": "イルボム",
+  "entity.goety.ice_bouquet": "アイスブーケ",
+  "entity.goety.ice_chunk": "氷の塊",
+  "entity.goety.scatter_mine": "スキャッターマイン",
+  "entity.goety.snap_fungus": "スナップ菌",
+  "entity.goety.blast_fungus": "ブラスト菌",
+  "entity.goety.berserk_fungus": "ベルセルク菌",
+  "entity.goety.fire_tornado": "炎の竜巻",
   "entity.goety.falling_block": "Falling Block",
-  "entity.goety.corrupted_beam":"腐敗のビーム",
+  "entity.goety.corrupted_beam": "腐敗のビーム",
 
-  "entity.goety.boat":"ボート",
-  "entity.goety.chest_boat":"チェスト付きボート",
+  "entity.goety.boat": "ボート",
+  "entity.goety.chest_boat": "チェスト付きボート",
 
-  "entity.goety.haunted_armor_stand":"幽霊の防具立て",
-  "entity.goety.haunted_painting":"幽霊の絵",
+  "entity.goety.haunted_armor_stand": "幽霊の防具立て",
+  "entity.goety.haunted_painting": "幽霊の絵",
 
-  "entity.goety.fire_blast_trap":"ファイアブラストラップ",
-  "entity.goety.lightning_trap":"ライトニングトラップ",
-  "entity.goety.fire_rain_trap":"ファイアレイントラップ",
-  "entity.goety.arrow_rain_trap":"アローレイントラップ",
-  "entity.goety.updraft_blast":"上昇気流ブラスト",
-  "entity.goety.storm_util":"雷雨",
-  "entity.goety.summon_apostle":"使徒",
-  "entity.goety.hail_cloud":"ヘイルクラウド",
-  "entity.goety.brew_effect_cloud":"醸造エフェクトクラウド",
-  "entity.goety.brew_effect_gas":"醸造効果ガス",
-  "entity.goety.laser":"レーザー",
-  "entity.goety.magic_ground":"マジックグラウンド",
-  "entity.goety.tunneling_fang":"トンネルの牙",
+  "entity.goety.fire_blast_trap": "ファイアブラストラップ",
+  "entity.goety.lightning_trap": "ライトニングトラップ",
+  "entity.goety.fire_rain_trap": "ファイアレイントラップ",
+  "entity.goety.arrow_rain_trap": "アローレイントラップ",
+  "entity.goety.updraft_blast": "上昇気流ブラスト",
+  "entity.goety.cushion": "クッションのフォーカス",
+  "entity.goety.storm_util": "雷雨",
+  "entity.goety.summon_apostle": "使徒",
+  "entity.goety.hail_cloud": "ヘイルクラウド",
+  "entity.goety.brew_effect_cloud": "醸造エフェクトクラウド",
+  "entity.goety.brew_effect_gas": "醸造効果ガス",
+  "entity.goety.laser": "レーザー",
+  "entity.goety.magic_ground": "マジックグラウンド",
+  "entity.goety.tunneling_fang": "トンネルの牙",
 
   "item.goety.focus_bag": "フォーカスバッグ",
   "item.goety.brew_bag": "醸造バッグ",
@@ -208,6 +209,7 @@
   "item.goety.ominous_staff": "不気味な杖",
   "item.goety.necro_staff": "ネクロスタッフ",
   "item.goety.wind_staff": "風の杖",
+  "item.goety.storm_staff": "Storm Staff",
   "item.goety.nameless_staff": "名も無き杖",
   "item.goety.totem_of_roots": "ルーツのトーテム",
   "item.goety.totem_of_souls": "魂のトーテム",
@@ -305,8 +307,8 @@
   "item.goety.rotten_boat": "腐ったボート",
   "item.goety.rotten_chest_boat": "腐ったチェスト付きボート",
 
-  "item.goety.haunted_armor_stand":"幽霊の防具立て",
-  "item.goety.haunted_painting":"幽霊の絵",
+  "item.goety.haunted_armor_stand": "幽霊の防具立て",
+  "item.goety.haunted_painting": "幽霊の絵",
 
   "item.goety.cursed_knight_helmet": "呪われた騎士の兜",
   "item.goety.cursed_knight_chestplate": "呪われた騎士の胸当て",
@@ -324,6 +326,7 @@
   "item.goety.dark_boots": "闇のブーツ",
 
   "item.goety.ring_of_want": "強欲のリング",
+  "item.goety.ring_of_the_dragon": "Ring of the Dragon",
   "item.goety.dark_hat": "ダークハット",
   "item.goety.grand_turban": "グランドターバン",
   "item.goety.witch_hat": "魔女の帽子",
@@ -373,6 +376,7 @@
   "item.goety.ghastly_focus": "凄惨なフォーカス",
   "item.goety.iceology_focus": "氷学のフォーカス",
   "item.goety.barricade_focus": "バリケードのフォーカス",
+  "item.goety.pulverize_focus": "Pulverize Focus",
   "item.goety.illusion_focus": "鏡のフォーカス",
   "item.goety.feast_focus": "追尾牙のフォーカス",
   "item.goety.teeth_focus": "歯のフォーカス",
@@ -389,6 +393,7 @@
   "item.goety.wind_blast_focus": "暴風のフォーカス",
   "item.goety.shocking_focus": "ショッキングのフォーカス",
   "item.goety.charge_focus": "充電のフォーカス",
+  "item.goety.thunderbolt_focus": "サンダーボルトのフォーカス",
   "item.goety.lightning_focus": "ライトニングのフォーカス",
   "item.goety.shockwave_focus": "ショックウェーブのフォーカス",
   "item.goety.sonic_boom_focus": "ソニックブームのフォーカス",
@@ -396,8 +401,10 @@
   "item.goety.soul_light_focus": "魂の光のフォーカス",
   "item.goety.glow_light_focus": "発光のフォーカス",
   "item.goety.iron_hide_focus": "アイアンハイドのフォーカス",
+  "item.goety.bulwark_focus": "ブルワークのフォーカス",
   "item.goety.launch_focus": "打ち上げのフォーカス",
   "item.goety.flying_focus": "飛行のフォーカス",
+  "item.goety.cushion_focus": "クッションのフォーカス",
   "item.goety.call_focus": "コールのフォーカス",
   "item.goety.recall_focus": "リコールのフォーカス",
   "item.goety.command_focus": "コマンドのフォーカス",
@@ -780,6 +787,8 @@
   "info.goety.witch_robe_brew": "風魔法のソウルコストが半分になる。",
   "info.goety.warlock_garment": "マイナス効果を受けると自動的にいぼだらけの卵を使用します。",
   "info.goety.warlock_robe": "爆発に対する耐性 +85%。",
+  "info.goety.ring_of_want": "When enchanted with Wanting, increases looting level when killing with servants or spells.",
+  "info.goety.ring_of_the_dragon": "Empowers breathing spells when worn.",
   "info.goety.grave_gloves": "サイスの攻撃速度 +50%。",
   "info.goety.wayfarers_belt": "移動速度と水泳速度、ステップとジャンプの高さが増加します。",
   "info.goety.spiteful_belt": "ダメージを受けると棘ダメージで攻撃者を傷つけます。",
@@ -827,6 +836,7 @@
   "spell.goety.frost": "§9フロスト§9",
   "spell.goety.geomancy": "§7ジオマンシー§7",
   "spell.goety.wind": "§b風§b",
+  "spell.goety.storm": "§6Storm§6",
   "spell.goety.void": "§5ボイド§5",
 
   "tooltip.goety.arca": "アルカの場所: ",
@@ -1045,10 +1055,12 @@
   "subtitle.goety.vanguard_spell": "呪文を唱える",
   "subtitle.goety.vanguard_summon": "召喚呪文",
   "subtitle.goety.command": "コマンド",
+  "subtitle.goety.shield_up": "シールドアップ",
   "subtitle.goety.bolt_impact": "ソウルボルトの衝撃",
   "subtitle.goety.soul_explode": "魂の爆発",
   "subtitle.goety.heal_spell": "回復呪文",
   "subtitle.goety.wind": "ウィンドブラスト",
+  "subtitle.goety.thunderbolt": "サンダーボルトをキャストする",
   "subtitle.goety.updraft_blast": "上昇気流の爆発",
   "subtitle.goety.zap": "サンダーザップ",
   "subtitle.goety.rumble": "ゴロゴロ",
