Organized Spell config a bit and added more new spells.

--- a/src/main/resources/assets/goety/lang/zh_cn.json
+++ b/src/main/resources/assets/goety/lang/zh_cn.json
@@ -209,6 +209,7 @@
   "item.goety.ominous_staff": "不祥之杖",
   "item.goety.necro_staff": "死灵魔杖",
   "item.goety.wind_staff": "风之魔杖",
+  "item.goety.storm_staff": "风暴魔杖",
   "item.goety.nameless_staff": "无名魔杖",
   "item.goety.totem_of_roots": "根之图腾",
   "item.goety.totem_of_souls": "灵魂图腾",
@@ -325,6 +326,7 @@
   "item.goety.dark_boots": "黑暗靴子",
 
   "item.goety.ring_of_want": "渴望戒指",
+  "item.goety.ring_of_the_dragon": "龙息戒指",
   "item.goety.dark_hat": "黑暗帽子",
   "item.goety.grand_turban": "华丽头巾",
   "item.goety.witch_hat": "女巫帽",
@@ -374,6 +376,7 @@
   "item.goety.ghastly_focus": "阴森聚晶",
   "item.goety.iceology_focus": "冰川聚晶",
   "item.goety.barricade_focus": "障碍聚晶",
+  "item.goety.pulverize_focus": "瓦解聚晶",
   "item.goety.illusion_focus": "幻象聚晶",
   "item.goety.feast_focus": "尖牙盛宴聚晶",
   "item.goety.teeth_focus": "牙之聚晶",
@@ -399,6 +402,7 @@
   "item.goety.glow_light_focus": "发光聚晶",
   "item.goety.iron_hide_focus": "铁皮聚晶",
   "item.goety.bulwark_focus": "壁垒聚晶",
+  "item.goety.soul_heal_focus": "治疗聚晶",
   "item.goety.launch_focus": "发射聚晶",
   "item.goety.flying_focus": "飞翔聚晶",
   "item.goety.cushion_focus": "云垫聚晶",
@@ -793,6 +797,8 @@
   "info.goety.witch_robe_brew": "“按 %s 用以打开女巫袍内部酿造台.",
   "info.goety.warlock_garment": "被负面效果影响时自动使用地狱疣蛋.",
   "info.goety.warlock_robe": "+85% 爆炸抗性.",
+  "info.goety.ring_of_want": "当被附魔渴望时，用呼吸聚晶法术杀死敌人会增加战利品掉落，就像抢夺那样.",
+  "info.goety.ring_of_the_dragon": "增强呼吸聚晶的威力.",
   "info.goety.grave_gloves": "+50% 镰刀攻速.",
   "info.goety.wayfarers_belt": "增加游泳速度，移动速度，跳跃高度，以及使你可以直接迈上一格高的方块.",
   "info.goety.spiteful_belt": "荆棘反伤攻击者.",
@@ -840,6 +846,7 @@
   "spell.goety.frost": "§9霜冻§9",
   "spell.goety.geomancy": "§7占卜§7",
   "spell.goety.wind": "§b烈风§b",
+  "spell.goety.storm": "§6风暴§6",
   "spell.goety.void": "§5虚空§5",
 
   "tooltip.goety.arca": "灵魂方舟位置: ",
@@ -1050,6 +1057,7 @@
   "subtitle.goety.roar_spell": "大声嘶吼",
   "subtitle.goety.fire_breath": "火焰呼吸",
   "subtitle.goety.soul_armor": "灵魂盔甲已就位",
+  "subtitle.goety.soul_heal": "灵魂治疗",
   "subtitle.goety.prepare_spell": "准备施法",
   "subtitle.goety.prepare_summon": "准备召唤",
   "subtitle.goety.cast_spell": "施法",
