Added new structure and pottery sherds. Updated API.

--- a/src/main/resources/assets/goety/lang/ja_jp.json
+++ b/src/main/resources/assets/goety/lang/ja_jp.json
@@ -412,6 +412,12 @@
   "item.goety.ender_chest_focus": "エンダーチェストのフォーカス",
   "item.goety.corruption_focus": "腐敗のフォーカス",
 
+  "item.goety.cross_pottery_sherd": "Cross Pottery Sherd",
+  "item.goety.dead_pottery_sherd": "Dead Pottery Sherd",
+  "item.goety.haunt_pottery_sherd": "Haunt Pottery Sherd",
+  "item.goety.night_pottery_sherd": "Night Pottery Sherd",
+  "item.goety.soul_pottery_sherd": "Soul Pottery Sherd",
+
   "item.goety.pedestal_dummy": "ペデスタル",
 
   "item.goety.music_disc_vizier": "レコード",
