--- a/src/main/resources/assets/goety/lang/zh_cn.json
+++ b/src/main/resources/assets/goety/lang/zh_cn.json
@@ -412,6 +412,12 @@
   "item.goety.ender_chest_focus": "末影箱聚晶",
   "item.goety.corruption_focus": "腐化聚晶",
 
+  "item.goety.cross_pottery_sherd": "Cross Pottery Sherd",
+  "item.goety.dead_pottery_sherd": "Dead Pottery Sherd",
+  "item.goety.haunt_pottery_sherd": "Haunt Pottery Sherd",
+  "item.goety.night_pottery_sherd": "Night Pottery Sherd",
+  "item.goety.soul_pottery_sherd": "Soul Pottery Sherd",
+
   "item.goety.pedestal_dummy": "祭坛基座",
 
   "item.goety.music_disc_vizier": "音乐唱片",
